--- a/frontend/gpt4all.io/public/manifest.json
+++ b/frontend/gpt4all.io/public/manifest.json
@@ -21,5 +21,5 @@
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
-  "background_color": "#2b2b2b"
+  "background_color": "#ffffff"
 }
